# autoformalization-transpilation

./: .gitignore  .gitmodules  .mailmap  CONTRIBUTORS  Dockerfile  README.md  compose.yml  config.py  coq_install.sh  demo.dump  demo.lean  example.lean  lean_install.sh  main.py  pyproject.toml  renovate.json  target.out  test.v  test_imp.v  utils.py
.github/: pull_request_template.md
coq_install/: coq_01_opam_install.sh  coq_03_lean_import_install.sh
data/processed/: coq_proofs_dataset.json
dataset/: coq_proofs_dataset.json  scrape.py  test_scrape.py
dataset/processed_data/: coq_proofs_dataset.json
install/: coq_01_opam_install.sh  coq_02_coq_install.sh  coq_03_lean_import_install.sh  lean_install.sh
src/: config.py  isomorphism_prover.py  isomorphism_prover_heuristics.py  main.py  models.py  project_util.py  run_itp.py  translation_checker.py  utils.py
src/dataset/: README.md  extract_dependencies.py  helpers.py  make_quadratic_dataset.py  make_single_file.py  make_single_file_datasets.sh  merge_single_file.py  pre_process_files.py  prepare.py  preprocess.py  reconstruct_coq.py  schemas.py  scrape.py  scrape_linearized.py  test.py
src/dependency_graph/: EverythingLF.dpd  README.md  combine_graph.py  depth_graph.v  generate_dgraph.sh  playground.ipynb  plot.ipynb  sort_dataset.py  test.ipynb
src/prompts/: completion.py  transpilation.py
src/scorers/: completion.py  transpilation.py
src/simple-tests/: StackMachine-admitted.v  StackMachine-statements.v  incomplete.v  incomplete_statements.v  proof.v
src/solvers/: agent.py  workflows.py
src/tasks/: coq_complete.py  coq_complete_from_file.py  coq_to_lean.py  (+2 more)
(+110 files in other folders)
