[project]
name = "autoformalization"
version = "0.1.0"
description = "For the AlphaProof for Software Verification MARS project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
