[project]
name = "autoformalization"
version = "0.1.0"
description = "For the AlphaProof for Software Verification MARS project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.61.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "mypy>=1.15.0",
    "dill>=0.3.9",
    "sympy>=1.13.3",
    "coq-tools>=0.0.7",
    "inspect-ai>=0.3.73",
    "anthropic>=0.49.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "pre-commit>=4.0.1",
]

[tool.ruff]
line-length = 88  # Adjust as needed
target-version = "py311"

[tool.ruff.lint]
select = ["I"]  # Enable import sorting
